--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "clsx": "^1.2.0",
     "focus-visible": "^5.2.0",
     "framer-motion": "7.8.1",
+    "fs": "^0.0.1-security",
     "mdast-util-to-string": "^3.1.0",
     "mdx-annotations": "^0.1.1",
     "next": "13.3.0",
+    "path": "^0.12.7",
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
